[gd_scene load_steps=2 format=3 uid="uid://shmup_minigame"]

[ext_resource type="Script" path="res://scripts/shmup_game.gd" id="1"]

[node name="ShmupGame" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="Player" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.2, 0.8, 1, 1)

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]

[node name="Enemies" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Health: 100"

[node name="EnemiesLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Enemies: 10"

[node name="WaveLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 24
text = "Wave: 1"

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Arrow Keys: Move | Space/Enter: Attack"
horizontal_alignment = 1
